--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  uuid: ^3.0.7
+  crypto: ^3.0.2
+  path: ^1.8.2
+  http: ^0.13.5
+  otp: ^3.1.3
 
 dev_dependencies:
   flutter_test:
