--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+       <receiver android:name=".receiver.PowerConnectionReceiver"
+           android:exported="false">
+           <intent-filter>
+               <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+               <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+           </intent-filter>
+       </receiver>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
