--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   path: ^1.8.2
   http: ^0.13.5
   otp: ^3.1.3
+  battery_info: ^1.1.1
+  flutter_background_service: ^2.4.6
+  flutter_local_notifications: ^12.0.4
 
 dev_dependencies:
   flutter_test:
