--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   battery_info: ^1.1.1
   flutter_background_service: ^2.4.6
   flutter_local_notifications: ^12.0.4
+  provider: ^6.0.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_secure_storage: ^7.0.1
+  sleek_circular_slider: ^2.0.1
+  package_info_plus: ^3.0.2
+  url_launcher: ^6.1.7
+  disable_battery_optimization: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
