--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nathan.batter_saver.battery_saver">
    <application
-        android:label="battery_saver"
+        android:label="Battery Saver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
