--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nathan.batter_saver.battery_saver">
-   <application
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+    <application
         android:label="Battery Saver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -17,21 +21,29 @@
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"
+                />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-       <receiver android:name=".receiver.PowerConnectionReceiver"
-           android:exported="false">
-           <intent-filter>
-               <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
-               <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
-           </intent-filter>
-       </receiver>
+        <service
+            android:enabled="true"
+            android:exported="false"
+            android:name=".ForegroundService"
+            android:stopWithTask="false"
+            />
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+            </intent-filter>
+        </receiver>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
