--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^7.0.1
-  sleek_circular_slider: ^2.0.1
   package_info_plus: ^3.0.2
   url_launcher: ^6.1.7
   disable_battery_optimization: ^1.1.0+1
@@ -63,6 +62,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  # flutter packages pub run build_runner build
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+  pigeon: ^10.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
