--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_secure_storage: ^7.0.1
   package_info_plus: ^3.0.2
   url_launcher: ^6.1.7
+  disable_battery_optimization: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
