--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.8
+version: 0.0.9
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -46,9 +46,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^7.0.1
-  package_info_plus: ^3.0.2
+  package_info_plus: ^4.2.0
   url_launcher: ^6.1.7
   disable_battery_optimization: ^1.1.0+1
+  flutter_markdown: ^0.6.18+2
 
 dev_dependencies:
   flutter_test:
@@ -77,9 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/ic_launcher_round.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
